# cartoon-maker

./: .gitignore  CMakeLists.txt  README.md  main.cpp  res.qrc
entities/: Cartoon.cpp  Cartoon.h  Frame.cpp  Frame.h  models.qrc
entities/Snake/: skeleton.txt
entities/body/: Body.cpp  Body.h  BodySnapshot.cpp  BodySnapshot.h
entities/body/factory/: BodyFactory.cpp  BodyFactory.h
entities/skeleton/: Skeleton.cpp  Skeleton.h  SkeletonSnapshot.cpp  SkeletonSnapshot.h
entities/skeleton/point/: MainPoint.cpp  MainPoint.h  PointSnapshot.cpp  PointSnapshot.h  SidePoint.cpp  SidePoint.h  point.cpp  point.h  point_utils.h
logic/: Animator.cpp  Animator.h  CartoonEditorSnaphot.h
logic/bool_animation/: VisibilityAnimation.cpp  VisibilityAnimation.h
logic/factory/: StyleManager.cpp  StyleManager.h
logic/images/: Image.cpp  Image.h
logic/images/factory/: ImageFactory.cpp  ImageFactory.h
res/models/Bug/: skeleton.txt
res/models/Goldfish/: goldfish.ai  skeleton.txt
res/models/Meadow/: skeleton.txt
res/models/Octopus/: skeleton.txt
res/models/Pig/: skeleton.txt
res/models/Snake/: skeleton.txt
res/models/Tortoise/: skeleton.txt
res/models/Tree/: skeleton.txt
res/models/UFO/: skeleton.txt
res/models/Water/: skeleton.txt  water.ai
res/styles/button/: style.txt
res/styles/cartooneditor/: style.txt
res/styles/contextmenu/: style.txt
res/styles/framewidget/: style.txt
res/styles/mainwindow/: style.txt
res/styles/modelswidget/: style.txt
res/styles/pics/: style.txt
res/styles/scene/: style.txt
res/styles/start_menu_button/: style.txt
res/styles/start_widget/: style.txt
ui/: CartoonScene.cpp  CartoonScene.h  cartooneditor.cpp  cartooneditor.h  cartooneditor.ui  frameview.cpp  frameview.h  framewidget.cpp  framewidget.h  framewidget.ui  modelview.cpp  modelview.h  modelview.ui  modelwidget.cpp  modelwidget.h  modelwidget.ui  testwidget.cpp  testwidget.h  testwidget.ui
ui/context_menu/: MainPointContextMenu.cpp  MainPointContextMenu.h
ui/context_menu/widgets/scaleslider/: ScaleSlider.cpp  ScaleSlider.h
ui/main_window/: mainwindow.cpp  mainwindow.h  startwidget.cpp  startwidget.h  startwidget.ui
